# KGAI-biocypher

./: create_knowledge_graph.py  docker-compose.yml  pyproject.toml
config/: biocypher_config.yaml  biocypher_docker_config.yaml  schema_config.yaml
data/: schema.org.jsonld  schemaorg-current-http_edited.rdf  test_MB3.jsonld
template_package/adapters/: example_adapter.py
