[tool.poetry]
name = "kgai-biocypher"
version = "0.5.43"
description = "Template for creating a BioCypher-driven knowledge graph"
authors = [
    "Michael Wenk <mwenk@ipb-halle.de>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
biocypher = "^0.5.43"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
